答え及び解説を中央揃えにするように追加

--- a/htdocs/aha/stylesheet.css
+++ b/htdocs/aha/stylesheet.css
@@ -83,3 +83,16 @@
 	display: block;
 	clear: both;
 }
+
+
+
+IMG.displayedAnswerIMG {
+	display: block;
+	margin: 0 auto;
+}
+
+
+p.explanation {
+	display: block;
+	margin: 0 auto;
+}
